# quacs

./: .gitignore  .gitmodules  .kodiak.toml  Cargo.toml  LICENSE  README.md  build_wasm.sh  index.html  main.py  meta.json  package-lock.json  package.json  requirements.txt  scraper.py  tsconfig.json  vue.config.js
.github/: FUNDING.yml  dependabot.yml  scrape.yml
.github/workflows/: codeql-analysis.yml  gh-pages-deploy.yml  lighthouse.yml  lint.yml  main.yml  scrape.yml  test.yml
catalog_scraper/: main.py
covid_scraper/: main.py
css/: index.css
degree-planner/: Cargo.toml  requirements.txt  scraper.py
degree-planner/src/: main.rs
faculty_directory_scraper/: main.py
old/: index.js
old/data/: catalog.json
prereq_scraper/: main.py
prerequisites_scraper/: main.py
public/: index.html
scrapers/: requirements.txt
scrapers/abc_eats/: get_data.py
scrapers/catalog_scraper/: main.py
scrapers/csci_topics_scraper/: main.py
scrapers/datadog/: README.md  send_metrics.py
scrapers/degreeworks_scraper/: parser.py  scraper.py
scrapers/faculty_directory_scraper/: main.py
scrapers/hass_pathways_scraper/: main.py
scrapers/prerequisites_graph/: main.py
scrapers/prerequisites_scraper/: main.py
scrapers/rmp_scraper/: main.py
scrapers/scripts/: weekly_scrape.sh
scrapers/sis_scraper/: block_types.py  conflict_logic.py  main.py  prerequisites.py  sis_scraper_test.py  util.py
scrapers/transfer_scraper/: main.py
scripts/: build.sh  build_entry.sh  build_single.sh  build_wasm.sh  gh-pages-deploy.js  gh-pages-deploy.sh  oxy-gh-pages-deploy.sh  oxy_build_entry.sh  short_sem_to_long_sem.py
sis_scraper/: .env-template  main.py  parsed.rs  sis_scraper_test.py
site/: .stylelintignore  CNAME  package-lock.json  package.json  tsconfig.json  vue.config.js
site/.husky/: post-checkout  pre-commit
site/public/: index.html
site/scripts/: build_entry.sh  build_single.sh  gh-pages-deploy.sh  lint.sh  short_sem_to_long_sem.py
site/src/: App.vue  main.ts  registerServiceWorker.ts  searchUtilities.ts  sponsors.ts  typings.ts  utilities.ts
site/src/components/: AdvertImage.vue  Advertisement.vue  Calendar.vue  CourseBadges.vue  CourseCard.vue  CourseSetEdit.vue  PrereqGraph.vue  SemesterBars.vue  Settings.vue  UnofficialScheduleModal.vue  UnofficialScheduleWarning.vue  scrapeTranscript.ts
site/src/quacs-rs/: Cargo.toml
site/src/quacs-rs/src/: context.rs  lib.rs  semester_data.rs  test_context.rs  utils.rs  wasm_context.rs
site/src/router/: index.ts
site/src/store/: index.ts
site/src/views/: Course.vue  Home.vue  Prerequisites.vue  Schedule.vue  Search.vue  Sponsors.vue
site/src/workers/: schedule.worker.ts
src/: App.vue  App.vue.rej  lib.rs  main.rs  main.ts  parsed.rs  registerServiceWorker.ts  searchUtilities.ts  types.rs  typings.ts  utilities.ts  utils.rs
src/assets/styles/: colors.css  global.css  main.css
src/components/: Calendar.vue  CourseCard.vue  CourseSetEdit.vue  HelloWorld.vue  Homepage.vue  PrerequisiteModal.vue  PresetEdit.vue  Settings.vue  scrapeTranscript.js  scrapeTranscript.ts
src/components/sections/: CourseInfo.vue  DesktopSections.vue  GeneralSections.vue  MobileSections.vue  SectionInfo.vue  Sections.vue  style.css  utilities.ts
src/components/utils/: DropdownCaret.vue
src/quacs-rs/: Cargo.toml
src/quacs-rs/src/: lib.rs  utils.rs
src/router/: index.ts
src/store/: index.ts  state.ts
src/store/data/: catalog.json  prerequisites.json  schools.json
src/store/modules/: prerequisites.ts  schedule.ts  sections.ts  settings.ts
src/views/: Coursepage.vue  Department.vue  Home.vue  Prerequisites.vue  Schedule.vue  Search.vue
src/workers/: schedule.worker.ts
transcript_scraper/: index.html  readme.md  scrape_transcript.js
(+31 files in other folders)
