[package]
name = "quacs-rs"
description = "WebAssembly core for the Questionably Accurate Course Scheduler"
version = "0.1.0"
authors = ["Benjamin Sherman <benjamin@bensherman.io>"]
repository = "https://github.com/quacs/quacs-rs"
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug = ["console_error_panic_hook"]
benchmark = []

[dependencies]
phf = { version = "^0.10", features = ["macros"] }
wasm-bindgen = "^0.2"
web-sys = { version = "^0.3.52", features = ["console"] }

console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
